# Blocked

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.md
data/: EmpireStateBuilding.stl  capital.stl  ducky2.stl  f14.STL  pin_v1.stl
docs/: Final-Goal Calibration Presentation.pptx  Project Proposal Presentation.pptx
src/: App.cpp  App.h  Block.cpp  Block.h  CMakeLists.txt  GLCanvas.cpp  GLCanvas.h  HelperFunctions.cpp  HelperFunctions.h  Layer.cpp  Layer.h  MainWindow.cpp  MainWindow.h  Merge.cpp  Merge.h  NoGuiMain.cpp  Stability.cpp  Stability.h  Voxelize.cpp  Voxelize.h  WorkerThread.cpp  WorkerThread.h  cost.cpp  cost.h  menu.cpp  winmain.cpp
src/opengl/: CMakeLists.txt
src/opengl/cube/: CMakeLists.txt  cube.cpp
src/opengl/isosurf/: CMakeLists.txt  isosurf.cpp
src/opengl/penguin/: CMakeLists.txt  penguin.cpp
src/opengl/pyramid/: CMakeLists.txt  pyramid.cpp
src/tests/: BlockInitTest.cpp  BoMTest.cpp  CMakeLists.txt  ImportTest.cpp  RenderSTLTest.cpp  emptyLayerStabilityTest.cpp  merge_tests.cpp  stableLayerTest.cpp  unstableLayerTest.cpp  voxelize_test.cpp
